Update contact email in footer section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="footer-col footer-contact">
                 <h4>Get in Touch</h4>
                 <p><i class="fas fa-phone"></i> Call: +91 83280 19124</p>
-                <p><i class="fas fa-envelope"></i> Email: support@ecoscansimple.com</p>
+                <p><i class="fas fa-envelope"></i> Email: sai.anish1000@gmail.com</p>
                 <div class="social-links">
                     <a href="https://www.instagram.com/sai_anish_2006" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="#" title="Facebook"><i class="fab fa-facebook"></i></a>
